# UniMart_by_EvoQ

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  TERMS_OF_SERVICE.md  alembic.ini  pyproject.toml
.github/workflows/: pre-commit.yml
app/: main.py
app/api/v1/: __init__.py  auth.py  cart.py  dependencies.py  products.py  routers.py  users.py
app/db/: __init__.py  db.py
app/migrations/: env.py
app/migrations/versions/: 1aeee680cc4d_removed_password_salt_field.py  315845f05322_added_owner_field_to_product.py  39ccc998471c_updated_last_login.py  49af15ac2ace_updated_last_login.py  541102dacd00_updated_users_table.py  5de0c38cb903_product_model.py  64ad69e55ba4_updated_password_hash_field_type.py  6a1f68c6ba5c_initial.py  702ef2358344_updated_last_login.py  84c4b24295c5_updated_last_login.py  95adae9f1847_updated_email_field_params.py  9aeab7183e60_last_update.py  ad001da37c17_updated_user_nullable_fields.py  b606927785ca_updated_user_nullable_fields.py  b62578d1f099_added_owner_produuct_relationship.py  b81f481e022a_added_cart_model.py  c7735f336fcf_renamed_password_hash_hashed_password.py  d69e9fc57efe_updated_user_fields.py  df76bf074141_initial.py  e6442c01655b_added_product_model.py
app/models/: __init__.py  base_model.py  cart.py  products.py  users.py
app/repositories/: cart.py  products.py  repository.py  users.py
app/schemas/: cart.py  products.py  users.py
app/services/: cart.py  managers.py  products.py  users.py  validators.py
app/settings/: __init__.py  auth.py  config.py
app/utils/: constants.py  factories.py  repository.py  unitofwork.py  utils.py
tests/: conftest.py  test_auth.py  test_cart.py  test_product.py  test_users.py
